[package]
name = "whirlpool"
version = "0.2.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "whirlpool"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
#spl-token = {version = "3.3", features = ["no-entrypoint"]}
spl-token = { version = "4.0.0", features=["no-entrypoint"] }

#solana-program = "1.14.12"
solana-program = "<1.17.0"
bytemuck = "1.4"
thiserror = "1.0"
uint = {version = "0.9.1", default-features = false}
borsh = "0.9.3"
#mpl-token-metadata = { version = "1.7", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "^1.11.0", features = ["no-entrypoint"] }


[dev-dependencies]
proptest = "1.0"
serde = "1.0.117"
serde_json = "1.0.59"

[dev-dependencies.serde_with]
version = "1.12.0"
features = ["json"]
